Bai3/bai3.output
State 41 conflicts: 4 shift/reduce
State 42 conflicts: 4 shift/reduce
State 43 conflicts: 4 shift/reduce
State 44 conflicts: 4 shift/reduce


Grammar

    0 $accept: S $end

    1 S: S1
    2  | S S1

    3 S1: S_W
    4   | S_DW
    5   | statement

    6 S_DW: DO block WHILE '(' condition ')' ';'

    7 S_W: WHILE '(' condition ')' block

    8 block: '{' statement_list '}'

    9 statement_list: %empty
   10               | statement_list statement

   11 statement: declaration
   12          | assignment

   13 declaration: VAR assignment

   14 assignment: ID '=' ex ';'

   15 ex: ex '+' ex
   16   | ex '-' ex
   17   | ex '*' ex
   18   | ex '/' ex
   19   | ID
   20   | NUMBER

   21 condition: condition OR condition
   22          | condition AND condition
   23          | single_condition

   24 single_condition: ex CONDITION ex
   25                 | ID
   26                 | NUMBER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6 7
')' (41) 6 7
'*' (42) 17
'+' (43) 15
'-' (45) 16
'/' (47) 18
';' (59) 6 14
'=' (61) 14
'{' (123) 8
'}' (125) 8
error (256)
ID (258) 14 19 25
NUMBER (259) 20 26
WHILE (260) 6 7
DO (261) 6
CONDITION (262) 24
OR (263) 21
AND (264) 22
VAR (265) 13


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
S (22)
    on left: 1 2, on right: 0 2
S1 (23)
    on left: 3 4 5, on right: 1 2
S_DW (24)
    on left: 6, on right: 4
S_W (25)
    on left: 7, on right: 3
block (26)
    on left: 8, on right: 6 7
statement_list (27)
    on left: 9 10, on right: 8 10
statement (28)
    on left: 11 12, on right: 5 10
declaration (29)
    on left: 13, on right: 11
assignment (30)
    on left: 14, on right: 12 13
ex (31)
    on left: 15 16 17 18 19 20, on right: 14 15 16 17 18 24
condition (32)
    on left: 21 22 23, on right: 6 7 21 22
single_condition (33)
    on left: 24 25 26, on right: 23


State 0

    0 $accept: . S $end

    ID     shift, and go to state 1
    WHILE  shift, and go to state 2
    DO     shift, and go to state 3
    VAR    shift, and go to state 4

    S            go to state 5
    S1           go to state 6
    S_DW         go to state 7
    S_W          go to state 8
    statement    go to state 9
    declaration  go to state 10
    assignment   go to state 11


State 1

   14 assignment: ID . '=' ex ';'

    '='  shift, and go to state 12


State 2

    7 S_W: WHILE . '(' condition ')' block

    '('  shift, and go to state 13


State 3

    6 S_DW: DO . block WHILE '(' condition ')' ';'

    '{'  shift, and go to state 14

    block  go to state 15


State 4

   13 declaration: VAR . assignment

    ID  shift, and go to state 1

    assignment  go to state 16


State 5

    0 $accept: S . $end
    2 S: S . S1

    $end   shift, and go to state 17
    ID     shift, and go to state 1
    WHILE  shift, and go to state 2
    DO     shift, and go to state 3
    VAR    shift, and go to state 4

    S1           go to state 18
    S_DW         go to state 7
    S_W          go to state 8
    statement    go to state 9
    declaration  go to state 10
    assignment   go to state 11


State 6

    1 S: S1 .

    $default  reduce using rule 1 (S)


State 7

    4 S1: S_DW .

    $default  reduce using rule 4 (S1)


State 8

    3 S1: S_W .

    $default  reduce using rule 3 (S1)


State 9

    5 S1: statement .

    $default  reduce using rule 5 (S1)


State 10

   11 statement: declaration .

    $default  reduce using rule 11 (statement)


State 11

   12 statement: assignment .

    $default  reduce using rule 12 (statement)


State 12

   14 assignment: ID '=' . ex ';'

    ID      shift, and go to state 19
    NUMBER  shift, and go to state 20

    ex  go to state 21


State 13

    7 S_W: WHILE '(' . condition ')' block

    ID      shift, and go to state 22
    NUMBER  shift, and go to state 23

    ex                go to state 24
    condition         go to state 25
    single_condition  go to state 26


State 14

    8 block: '{' . statement_list '}'

    $default  reduce using rule 9 (statement_list)

    statement_list  go to state 27


State 15

    6 S_DW: DO block . WHILE '(' condition ')' ';'

    WHILE  shift, and go to state 28


State 16

   13 declaration: VAR assignment .

    $default  reduce using rule 13 (declaration)


State 17

    0 $accept: S $end .

    $default  accept


State 18

    2 S: S S1 .

    $default  reduce using rule 2 (S)


State 19

   19 ex: ID .

    $default  reduce using rule 19 (ex)


State 20

   20 ex: NUMBER .

    $default  reduce using rule 20 (ex)


State 21

   14 assignment: ID '=' ex . ';'
   15 ex: ex . '+' ex
   16   | ex . '-' ex
   17   | ex . '*' ex
   18   | ex . '/' ex

    ';'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33


State 22

   19 ex: ID .
   25 single_condition: ID .

    OR        reduce using rule 25 (single_condition)
    AND       reduce using rule 25 (single_condition)
    ')'       reduce using rule 25 (single_condition)
    $default  reduce using rule 19 (ex)


State 23

   20 ex: NUMBER .
   26 single_condition: NUMBER .

    OR        reduce using rule 26 (single_condition)
    AND       reduce using rule 26 (single_condition)
    ')'       reduce using rule 26 (single_condition)
    $default  reduce using rule 20 (ex)


State 24

   15 ex: ex . '+' ex
   16   | ex . '-' ex
   17   | ex . '*' ex
   18   | ex . '/' ex
   24 single_condition: ex . CONDITION ex

    CONDITION  shift, and go to state 34
    '+'        shift, and go to state 30
    '-'        shift, and go to state 31
    '*'        shift, and go to state 32
    '/'        shift, and go to state 33


State 25

    7 S_W: WHILE '(' condition . ')' block
   21 condition: condition . OR condition
   22          | condition . AND condition

    OR   shift, and go to state 35
    AND  shift, and go to state 36
    ')'  shift, and go to state 37


State 26

   23 condition: single_condition .

    $default  reduce using rule 23 (condition)


State 27

    8 block: '{' statement_list . '}'
   10 statement_list: statement_list . statement

    ID   shift, and go to state 1
    VAR  shift, and go to state 4
    '}'  shift, and go to state 38

    statement    go to state 39
    declaration  go to state 10
    assignment   go to state 11


State 28

    6 S_DW: DO block WHILE . '(' condition ')' ';'

    '('  shift, and go to state 40


State 29

   14 assignment: ID '=' ex ';' .

    $default  reduce using rule 14 (assignment)


State 30

   15 ex: ex '+' . ex

    ID      shift, and go to state 19
    NUMBER  shift, and go to state 20

    ex  go to state 41


State 31

   16 ex: ex '-' . ex

    ID      shift, and go to state 19
    NUMBER  shift, and go to state 20

    ex  go to state 42


State 32

   17 ex: ex '*' . ex

    ID      shift, and go to state 19
    NUMBER  shift, and go to state 20

    ex  go to state 43


State 33

   18 ex: ex '/' . ex

    ID      shift, and go to state 19
    NUMBER  shift, and go to state 20

    ex  go to state 44


State 34

   24 single_condition: ex CONDITION . ex

    ID      shift, and go to state 19
    NUMBER  shift, and go to state 20

    ex  go to state 45


State 35

   21 condition: condition OR . condition

    ID      shift, and go to state 22
    NUMBER  shift, and go to state 23

    ex                go to state 24
    condition         go to state 46
    single_condition  go to state 26


State 36

   22 condition: condition AND . condition

    ID      shift, and go to state 22
    NUMBER  shift, and go to state 23

    ex                go to state 24
    condition         go to state 47
    single_condition  go to state 26


State 37

    7 S_W: WHILE '(' condition ')' . block

    '{'  shift, and go to state 14

    block  go to state 48


State 38

    8 block: '{' statement_list '}' .

    $default  reduce using rule 8 (block)


State 39

   10 statement_list: statement_list statement .

    $default  reduce using rule 10 (statement_list)


State 40

    6 S_DW: DO block WHILE '(' . condition ')' ';'

    ID      shift, and go to state 22
    NUMBER  shift, and go to state 23

    ex                go to state 24
    condition         go to state 49
    single_condition  go to state 26


State 41

   15 ex: ex . '+' ex
   15   | ex '+' ex .
   16   | ex . '-' ex
   17   | ex . '*' ex
   18   | ex . '/' ex

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33

    '+'       [reduce using rule 15 (ex)]
    '-'       [reduce using rule 15 (ex)]
    '*'       [reduce using rule 15 (ex)]
    '/'       [reduce using rule 15 (ex)]
    $default  reduce using rule 15 (ex)


State 42

   15 ex: ex . '+' ex
   16   | ex . '-' ex
   16   | ex '-' ex .
   17   | ex . '*' ex
   18   | ex . '/' ex

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33

    '+'       [reduce using rule 16 (ex)]
    '-'       [reduce using rule 16 (ex)]
    '*'       [reduce using rule 16 (ex)]
    '/'       [reduce using rule 16 (ex)]
    $default  reduce using rule 16 (ex)


State 43

   15 ex: ex . '+' ex
   16   | ex . '-' ex
   17   | ex . '*' ex
   17   | ex '*' ex .
   18   | ex . '/' ex

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33

    '+'       [reduce using rule 17 (ex)]
    '-'       [reduce using rule 17 (ex)]
    '*'       [reduce using rule 17 (ex)]
    '/'       [reduce using rule 17 (ex)]
    $default  reduce using rule 17 (ex)


State 44

   15 ex: ex . '+' ex
   16   | ex . '-' ex
   17   | ex . '*' ex
   18   | ex . '/' ex
   18   | ex '/' ex .

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33

    '+'       [reduce using rule 18 (ex)]
    '-'       [reduce using rule 18 (ex)]
    '*'       [reduce using rule 18 (ex)]
    '/'       [reduce using rule 18 (ex)]
    $default  reduce using rule 18 (ex)


State 45

   15 ex: ex . '+' ex
   16   | ex . '-' ex
   17   | ex . '*' ex
   18   | ex . '/' ex
   24 single_condition: ex CONDITION ex .

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33

    $default  reduce using rule 24 (single_condition)


State 46

   21 condition: condition . OR condition
   21          | condition OR condition .
   22          | condition . AND condition

    $default  reduce using rule 21 (condition)


State 47

   21 condition: condition . OR condition
   22          | condition . AND condition
   22          | condition AND condition .

    $default  reduce using rule 22 (condition)


State 48

    7 S_W: WHILE '(' condition ')' block .

    $default  reduce using rule 7 (S_W)


State 49

    6 S_DW: DO block WHILE '(' condition . ')' ';'
   21 condition: condition . OR condition
   22          | condition . AND condition

    OR   shift, and go to state 35
    AND  shift, and go to state 36
    ')'  shift, and go to state 50


State 50

    6 S_DW: DO block WHILE '(' condition ')' . ';'

    ';'  shift, and go to state 51


State 51

    6 S_DW: DO block WHILE '(' condition ')' ';' .

    $default  reduce using rule 6 (S_DW)
